# pdf_doc_classifier

./: ARCHITECTURE.md  DEVELOPER.md  PdfDocumentClassifier.spec  README.md  appearance.py  classifier.py  dashboard.py  database.py  dialogs.py  help_dialogs.py  implementation plan.md  main_window.py  pdf_engine.py  pyproject.toml  requirements.txt  review_workspace.py  run_app.py  test_appearance.py  test_automated_workflow_integration.py  test_classifier.py  test_dashboard.py  test_dashboard_count_accuracy.py  test_database.py  test_database_extended.py  test_embedded_pdf_text.py  test_end_to_end_workflow.py  test_job_database.py  test_menu_help.py  test_packaging.py  test_pdf_engine.py  test_pipeline_extended.py  test_review_database.py  test_review_integration.py  test_review_keyboard.py  test_review_redesign.py  test_review_workspace.py  test_thumbnail_service.py  test_ui_workflows.py  test_ux_simplification.py  test_workflow.py  (+3 more)
assets/: pdf-classifier.icns
